# model-service

./: .gitignore  Dockerfile  README.md  dataset.dvc  docker-compose.yml  get_tokanizer.py  model-service.py  prometheus.yml  pyproject.toml  requirements.txt
.github/workflows/: release.yml
src/: model_service.py
src/model_service/: app.py
